--- a/src/views/About/styles.module.scss
+++ b/src/views/About/styles.module.scss
@@ -23,7 +23,7 @@
     height: 300px;
     text-align: center;
     position: relative;
-    left: calc(-50vw);
+    left: -50vw;
     overflow: hidden;
     transform: rotate(-7.5deg);
     background-color: var(--secondaryColor);
