--- a/src/views/styles.module.scss
+++ b/src/views/styles.module.scss
@@ -1,16 +1,10 @@
 :root {
+  --primaryFont: 'Ubuntu', sans-serif;
+  --secondaryFont: 'Goldman', cursive;
+  --tertiaryFont: 'Audiowide', cursive;
   --primaryColor: #282C34;
   --secondaryColor: #FFFFFF;
   --tertiaryColor: #61DAFB;
-  --htmlColor: #E85E28;
-  --cssColor: #249CDA;
-  --jsColor: #F7DF1E;
-  --reactColor: #61DAFB;
-  --nodeColor: #689F63;
-  --sassColor: #C76494;
-  --gitColor: #F54D27;
-  --npmColor: #CB3837;
-  --npmColor: #CB3837;
 
   --boxShadow: 1px 1px 5px 0 var(--primaryColor);
   --textShadow: 1px 1px 5px var(--primaryColor);
@@ -20,7 +14,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: var(--primaryFont)
 }
 
 .app {
