--- a/src/components/SectionTitle/styles.module.scss
+++ b/src/components/SectionTitle/styles.module.scss
@@ -4,8 +4,8 @@
   padding: 5px 10px;
   background-color: var(--tertiaryColor);
 
-  span {
-    font-family: 'Goldman', cursive;
+  h3 {
+    font-family: var(--secondaryFont);
     font-size: 18px;
     text-transform: uppercase;
     color: var(--primaryColor);
