--- a/src/views/Projects/styles.module.scss
+++ b/src/views/Projects/styles.module.scss
@@ -4,5 +4,19 @@
 }
 
 .projectsContent {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   padding: 0 20px;
+  align-items: center;
+}
+
+.projectsMoreLink {
+  font-family: var(--secondaryFont);
+  text-decoration: none;
+  color: var(--secondaryColor);
+
+  &:hover {
+    color: var(--tertiaryColor);
+  }
 }
