Experience section progress

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -1,9 +1,9 @@
 .footer {
   padding: 20px;
-  background-color: var(--secondaryColor);
+  background-color: var(--primaryColor);
 
   p {
     text-align: center;
-    color: var(--primaryColor);
+    color: var(--secondaryColor);
   }
 }
