Fixes and improvements

--- a/src/components/ProjectCard/styles.module.scss
+++ b/src/components/ProjectCard/styles.module.scss
@@ -28,6 +28,7 @@
     img {
       width: 450px;
       position: absolute;
+      top: -180px;
       left: -50px;
       transform: rotate(15deg) scale(1);
       filter: brightness(90%);
